初次提交
将bitcoinj的示例工程拷贝过来，修改为基于pom，能编译通过，可以启动运行