@@ -1,2 +1,7 @@
 # btc-example-wallet-base-bitcoinj
 一个基于bitcoin实现的btc钱包（spv钱包）；拷贝自bitcoinj的示例代码
+
+
+# 说明
+1. 至少需要java17
+2. 执行时需要添加虚拟机参数`--module-path /JavaFx的安装路径/lib --add-modules=javafx.controls,javafx.fxml`
